conexao com heroku db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 
 # production
-# spring.datasource.username = jojblfhscpxkok
-# spring.datasource.password = Hx98HPGc3ed0UuHHKKlZ0PwAxk
-# spring.datasource.url = ${JDBC_DATABASE_URL}
+spring.datasource.username = ynramqdmajgzwf
+spring.datasource.password = OxqoYk_Fnc6exb3VrRNOzq9vi9
+spring.datasource.url = ${JDBC_DATABASE_URL}
 
 # localhost
-spring.datasource.username = postgres
-spring.datasource.password = 1234
-spring.datasource.url = jdbc:postgresql://localhost:5432/ead_test
+# spring.datasource.username = postgres
+# spring.datasource.password = 1234
+# spring.datasource.url = jdbc:postgresql://localhost:5432/ead_test
 
 spring.datasource.maxActive = 10
 spring.datasource.maxIdle = 5
